Libpas drive-by cleanup: compile commands, xcode build files, missing static inline https://bugs.webkit.org/show_bug.cgi?id=310067

Reviewed by Yusuke Suzuki.

Drive-by cleanup.

Canonical link: https://commits.webkit.org/309404@main